# truss

./: .gitignore  Cargo.toml  LICENSE  PROGRESS.md  QWEN.md  README.md  _check_mangle.out  _mangle_test.out  hello.out  t.truss
.omo/: boulder.json
.omo/drafts/: fix-lsp-token-truss.md  lsp-enhance.md  operator-fixity-syntax.md  preprocessor.md
.omo/notepads/fix-bugs/: decisions.md  learnings.md
.omo/notepads/lsp-enhance/: learnings.md
.omo/plans/: fix-lsp-token-truss.md  lsp-enhance.md  operator-fixity-syntax.md  preprocessor.md
.omo/run-continuation/: ses_11072070affeM5wdY6QVlZPTMq.json  ses_1109a9c1cffeCpT9EissVvGA0X.json  ses_110da50ddffesjFtvXyzRGYr4v.json  ses_115d7726cffekvbuXu5frNR2cq.json  ses_1163658a3ffefco5p6iNl2u2dH.json  ses_11abfae81ffegbg5B4LdQ739su.json
.qwen/: settings.json  settings.json.orig
.qwen/skills/add-semantic-check/: SKILL.md
src/: condition_eval.rs  lib.rs  main.rs  std_lib.rs
src/ast/: expression.rs  mod.rs  node.rs  statement.rs
src/diag/: mod.rs
src/id/: mod.rs
src/ir_gen/: emit.rs  mod.rs
src/krate/: mod.rs
src/lexer/: mod.rs  token.rs
src/lsp/: server.rs
src/macro_expander/: mod.rs
src/parser/: mod.rs  precedence.rs
src/scope/: mod.rs
src/symbol/: mod.rs
src/symbol_resolver/: mod.rs
src/trusspm/: build.rs  cli.rs  extractor.rs  lock.rs  manifest.rs  mod.rs  resolver.rs
src/type_resolver/: mod.rs
src/types/: mod.rs
tests/: condition_eval.rs  ir_gen.rs  lexer.rs  macro_expander.rs  parser.rs  symbol_resolver.rs  trussc.rs  type_inference.rs  type_resolver.rs
(+1 files in other folders)
