[package]
name = "truss"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "truss"
path = "src/bin/truss.rs"

[[bin]]
name = "trussc"
path = "src/bin/trussc.rs"

[[bin]]
name = "trussup"
path = "src/bin/trussup.rs"

[dependencies]
strum = { version = "0.28.0", features = ["derive"] }
anyhow = "1.0.102"
inkwell = { version = "0.9.0", features = ["llvm22-1"] }
duck-diagnostic = "0.7.1"
clap = { version = "4.6.1", features = ["derive"] }
